# battery-input-manager

./: README.md  meson.build
data/: battery-input-manager_user.service.in  bim.gresource.xml  bim_system.service.in  devices.json  meson.build  org.adishatz.Bim.conf  org.adishatz.Bim.gschema.xml  org.adishatz.Bim.service.in  org.adishatz.Bim.xml
debian/: changelog  control
src/: d-bus.c  d-bus.h  history.c  settings.h  suspend.c  suspend.h  utils.h
system/: d-bus.c  d-bus.h  history.h  main.c  meson.build  settings.c  suspend.c
user/: clocks.c  clocks.h  clocks_settings.c  clocks_settings.h  d-bus.c  d-bus.h  main.c  meson.build  settings.c  settings.h
